Remove jvmArg illegal-access, as this is removed in jdk 17